Uploaded Images List

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -6,9 +6,12 @@
 {% include 'flash_messages.html' %}
 
 {# Add the appropriate method and enctype attributes to the form tag to allow for file uploads #}
-<form action="{{ url_for('upload') }}">
-
-  {# Add the file upload field as you learnt for Flask-WTF #}
+<form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+  {{ upload_form.csrf_token }}
+  <div>
+    {{ upload_form.image.label }}
+    {{ upload_form.image }}
+  </div>
 
   <button type="submit" name="submit" class="btn btn-primary">Upload file</button>
 </form>
