View Images in the files route

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,16 @@
 body {
     padding-top: 5rem;
 }
+
+
+.img-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+img{
+    width: 360px;
+    height: 270px;
+    object-fit: cover;
+}
