--- a/app/templates/files.html
+++ b/app/templates/files.html
@@ -3,9 +3,10 @@
 {% block main %}
 
 {% include 'flash_messages.html' %}
-<ul>
+<div class="img-grid">
     {% for file in files %}
-        <li>{{ file }}</li>
+        <img src="{{ url_for('get_image', filename=file) }}" alt="">
     {% endfor %}
-</ul>
+</div>
+
 {% endblock %}
